// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "task",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.publish_qg"
    />
    <Alert
      className="spacer-top"
      variant="info"
    >
      onboarding.tutorial.with.azure_pipelines.BranchAnalysis.publish_qg.info.sentence1
    </Alert>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "tab",
          "continuous_integration",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.continous_integration.no_branches"
    />
  </li>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "task",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.publish_qg"
    />
    <Alert
      className="spacer-top"
      variant="info"
    >
      onboarding.tutorial.with.azure_pipelines.BranchAnalysis.publish_qg.info.sentence1
    </Alert>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "tab",
          "continuous_integration",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.continous_integration"
    />
  </li>
  <hr />
  <FormattedMessage
    defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.branch_protection"
    id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.branch_protection"
    values={
      Object {
        "link": <Link
          target="_blank"
          to="/documentation/analysis/azuredevops-integration/"
        >
          onboarding.tutorial.with.azure_pipelines.BranchAnalysis.branch_protection.link
        </Link>,
      }
    }
  />
</Fragment>
`;
